# jax_nn

./: 1_neural_network.ipynb  1_training_with_JAX.ipynb  2_autodiff.ipynb  4_flax.ipynb  pyproject.toml
