[tool.poetry]
name = "jax-nn"
version = "0.1.0"
description = ""
authors = ["jamie-mcg <jamie.mcgowan@mtkresearch.com>"]
readme = "README.md"
package-mode = false  # Add this line

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
matplotlib = "^3.9.1"
jax = "0.4.31"
torch = {version = "^2.4.0", extras = ["cu12"]}
torchvision = "^0.19.0"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
